# perfect6502-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  generate_bindings.sh
.github/workflows/: ci.yml
src/: bindings.rs  lib.rs
