[package]
name = "perfect6502-sys"
version = "0.2.1"
edition = "2021"
links = "perfect6502"
build = "build.rs"
authors = ["Zach Madsen <zachcmadsen@gmail.com"]
license = "MIT"
description = "Bindings to perfect6502"
repository = "https://github.com/zachcmadsen/perfect6502-sys"
readme = "README.md"
keywords = ["6502", "perfect6502"]
categories = ["external-ffi-bindings"]
include = [
	"src/**/*",
	"build.rs",
	"perfect6502/*.h",
	"perfect6502/netlist_sim.c",
	"perfect6502/perfect6502.c",
	"LICENSE",
	"README.md",
]

[build-dependencies]
cc = "1.0"
